Add Authenticated http(s) proxy support (#39)
* On subscribe's connect, be tolerant of trailing slash in server URL.

Primarily an issue in tests, I suspect, but good to be tolerant.

* update patch version

* Update README.md text to match (what will be) current version

* Upgrade requirements & inclusions.

Changed target to Java 1.8 since things on which we depend (_e.g._, okhttp)
required Java 1.8+.

* Update documentation

* Add support for http(s) proxy authentication

* Address issues in integration tests.

IDE warnings, and timing issues with reliable subscriptions.

Need to add proxy tests for provided authenticator

* Add squid proxy configurations for authenticated & unauthenticated proxy.

Used only for testing.

* Add test (& associated fix) for use of user-supplied Authenticator

* Fix Javadoc problem

* Add proxy testing description & impl to build.gradle

* Correct version for publication

* review comment

* Fix sec vulnerabilities in old guava

* Version update

* Correct imports as per standard

* Correct parenthesis