@@ -20,11 +20,11 @@ apply plugin: 'com.github.johnrengelman.shadow'
 //
 group            = 'io.vantiq'
 archivesBaseName = 'vantiq-sdk'
-version          = '1.1.1' 
+version          = '1.2.1'
 
 allprojects {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 }
 
 repositories {
@@ -32,9 +32,9 @@ repositories {
 }
 
 ext {
-    okhttpVersion = '4.9.3'
-    guavaVersion = '31.1-jre'
-    gsonVersion = '2.8.9'
+    okhttpVersion = '4.12.0'
+    guavaVersion = '32.1.3-jre'
+    gsonVersion = '2.10.1'
 }
 
 dependencies {
@@ -43,8 +43,12 @@ dependencies {
     compile "com.google.guava:guava:${guavaVersion}"
 
     testCompile "com.squareup.okhttp3:mockwebserver:${okhttpVersion}"
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'junit:junit:4.13.2'
+    testCompile 'org.hamcrest:hamcrest-library:2.2'
+}
+
+tasks.withType(Test) {
+    jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
 }
 
 test {
@@ -58,6 +62,16 @@ task intgTest(type:Test) {
     systemProperties['username'] = System.getProperty('username')
     systemProperties['password'] = System.getProperty('password')
     systemProperties['token'] = System.getProperty('token')
+    def useProxy = System.getProperty("proxyHost")
+    if (useProxy) {
+        def scheme = new URI(System.getProperty('server')).getScheme()
+        systemProperties["${scheme}.proxyHost"] = System.getProperty('proxyHost')
+        systemProperties["${scheme}.proxyPort"] = System.getProperty('proxyPort')
+        systemProperties["${scheme}.proxyUser"] = System.getProperty('proxyUser')
+        systemProperties["${scheme}.proxyPassword"] = System.getProperty('proxyPassword')
+        systemProperties["${scheme}.nonProxyHosts"] = ""
+    }
+
     useJUnit {
         includeCategories 'io.vantiq.client.intg.IntegrationTests'
     }
